// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a NoteEditor simple render should display the editor form for an existing note 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginTop": 20,
    }
  }
>
  <TextInput
    defaultValue="test title"
    onChangeText={[Function]}
    placeholder="Title"
  />
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <TextInput
      defaultValue="test content"
      multiline={true}
      onChangeText={[Function]}
      placeholder="Content"
    />
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Button
      onPress={[Function]}
      title="Cancel"
    />
    <Button
      disabled={true}
      onPress={[Function]}
      title="Save"
    />
  </View>
</View>
`;

exports[`a NoteEditor simple render should display the editor form when no Note 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginTop": 20,
    }
  }
>
  <TextInput
    onChangeText={[Function]}
    placeholder="Title"
  />
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <TextInput
      multiline={true}
      onChangeText={[Function]}
      placeholder="Content"
    />
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Button
      onPress={[Function]}
      title="Cancel"
    />
    <Button
      disabled={true}
      onPress={[Function]}
      title="Save"
    />
  </View>
</View>
`;
